# SiSWG

./: .gitignore  Cargo.toml  Makefile  README.md  example.md  example.toml  rustfmt.toml
src/: config.rs  main.rs  mathjax-config.js  style.css  template.html  tests.rs  utils.rs
