[package]
name = "siswg"
version = "2.0.0"
authors = ["3top1a <3top1a.official@gmail.com>", "Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/3top1a/SiSWG"
homepage = "https://3top1a.github.io/"
keywords = ["markdown", "html", "MathJax", "LaTeX"]
categories = ["command-line-utilities"]
description = "A tool to convert markdown files to HTML for my website"
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "resources/*"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = "3.1.6"
terminal_size = "0.1"
minify-html = { version = "0.8.0", features = ["js-esbuild"] }
comrak = "0.12.1"
html-escape = "0.2"
toml = "0.5.9"
serde_derive = "1.0.136"
serde = "1.0.136"

[dependencies.path-absolutize]
version = "3"
features = ["once_cell_cache"]
